feat: enhance repository with SEO, favicon, and tooling
- Update library to v1.0.0 with correct GitHub URLs
- Add Angular 20/21 peer dependency support
- Add custom favicon with FlexiGraph branding
- Add comprehensive SEO meta tags (Open Graph, Twitter Cards)
- Add npm scripts: build:lib:prod, test:lib:ci, lint
- Add Dependabot for automated dependency updates
- Add social preview image to demo assets

--- a/projects/demo/src/index.html
+++ b/projects/demo/src/index.html
@@ -1,17 +1,52 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>ngx-flexigraph Demo</title>
+  <title>FlexiGraph - Interactive Angular DAG Editor</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Interactive DAG editor for Angular with drag-and-drop reparenting">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- SEO Meta Tags -->
+  <meta name="description"
+    content="Interactive DAG editor for Angular with drag-and-drop reparenting, multi-parent support, export to PDF/PNG/SVG, and 4 beautiful themes.">
+  <meta name="keywords"
+    content="Angular, DAG, graph editor, visualization, drag-and-drop, Cytoscape, TypeScript, org chart, flowchart">
+  <meta name="author" content="Shubhank Nagar">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph / Social Media -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="FlexiGraph - Interactive Angular DAG Editor">
+  <meta property="og:description"
+    content="Build interactive DAG editors with drag-and-drop, multi-parent support, and rich export options.">
+  <meta property="og:image" content="https://shubhanknagar.github.io/FlexiGraph/assets/social-preview.png">
+  <meta property="og:url" content="https://shubhanknagar.github.io/FlexiGraph/">
+  <meta property="og:site_name" content="FlexiGraph">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="FlexiGraph - Interactive Angular DAG Editor">
+  <meta name="twitter:description"
+    content="Build interactive DAG editors with drag-and-drop, multi-parent support, and rich export options.">
+  <meta name="twitter:image" content="https://shubhanknagar.github.io/FlexiGraph/assets/social-preview.png">
+
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#8b5cf6">
+  <meta name="msapplication-TileColor" content="#8b5cf6">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="assets/favicon.png">
+  <link rel="apple-touch-icon" href="assets/favicon.png">
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
